--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./components/variables.scss";
+@import "./components/global.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
