--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap');
 @import "./components/global.scss";
 @import "./components/header/header.scss";
+@import "./components/presentation/presentation.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
