--- a/src/styles/components/global.scss
+++ b/src/styles/components/global.scss
@@ -8,3 +8,13 @@
     font-weight: 700;
     src: url('../../assets/fonts/Brown/Brown-Bold.ttf') format("truetype");
 }
+*{
+	margin: 0;
+	padding: 0;
+}
+
+body{
+	overflow-x: hidden;
+	position: relative;
+	width: 100%;
+}
