--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./components/global.scss";
 @import "./components/header/header.scss";
 @import "./components/presentation/presentation.scss";
+@import "./components/card/card.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
