--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "./components/header/header.scss";
 @import "./components/presentation/presentation.scss";
 @import "./components/card/card.scss";
+@import "./components/tabs/tabs.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
