--- a/src/styles/components/tabs/tabs.scss
+++ b/src/styles/components/tabs/tabs.scss
@@ -1,3 +1,10 @@
 .active {
     background-color: #16161A;
 }
+
+.sameLogo {
+    width: 90px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
