--- a/src/styles/components/global.scss
+++ b/src/styles/components/global.scss
@@ -8,7 +8,7 @@
     font-weight: 700;
     src: url('../../assets/fonts/Brown/Brown-Bold.ttf') format("truetype");
 }
-*{
+* {
 	margin: 0;
 	padding: 0;
 }
@@ -17,6 +17,10 @@ body{
 	overflow-x: hidden;
 	position: relative;
 	width: 100%;
+}
+
+div{
+    display: block;
 }
 
 a:hover .size{
