--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,9 @@
 @import "./components/global.scss";
-@import "./components/header/header.scss";
-@import "./components/presentation/presentation.scss";
+@import "./components/fonts/fonts.scss";
+@import "./components/sectionEnd/section-end.scss";
 @import "./components/card/card.scss";
 @import "./components/tabs/tabs.scss";
+@import "./components/contact/contact.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
