--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "./components/global.scss";
 @import "./components/fonts/fonts.scss";
+@import "./components/navbar/navbar.scss";
 @import "./components/sectionEnd/section-end.scss";
 @import "./components/card/card.scss";
 @import "./components/tabs/tabs.scss";
