--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import "./components/card/card.scss";
 @import "./components/tabs/tabs.scss";
 @import "./components/contact/contact.scss";
+@import "./components/model/model.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
