New Header - Responsive ok - text card white

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import "./components/tabs/tabs.scss";
 @import "./components/contact/contact.scss";
 @import "./components/model/model.scss";
+@import "./components/header/header.scss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
